# exedev-cli

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  fleet.example.yaml  fleet.pgsql.yaml
.github/: dependabot.yml
.github/workflows/: check.yml  release.yml
cli/: Cargo.toml  README.md  README.zh-CN.md
cli/src/: cli.rs  cli_command.rs  client.rs  command.rs  k8s_cli.rs  k8s_fleet.rs  k8s_main.rs  k8s_manager.rs  lib.rs  main.rs  output.rs  ssh.rs
core/: Cargo.toml
core/src/: client.rs  env.rs  lib.rs  shell.rs  terminal.rs
docs/: exe-dev-api-reference.md  exedev-automation.md  exedev-k8s.md  exedevctl.md  node-labeling.md
k8s/examples/: project-task-deployment.yaml
k8s/postgres/: README.md  cluster.yaml  kustomization.yaml  minio-secret.example.yaml  namespace.yaml  objectstore.yaml  pooler.yaml  scheduled-backup.yaml
k8s_cli/: Cargo.toml  README.md  README.zh-CN.md
k8s_cli/scripts/: README.md  bootstrap-node.sh  diagnose-node.sh
k8s_cli/scripts/lib/: exedev-cli.sh
k8s_cli/src/: cli.rs  fleet.rs  lib.rs  main.rs  manager.rs  output.rs
k8s_cli/src/manager/: api_proxy.rs  kubectl.rs  mod.rs  parsing.rs  process.rs  scripts.rs  state.rs  tests.rs
k8s_cli/test-fleets/: 01-minimal-new.yaml  02-existing-workers.yaml  03-isolated-and-shared.yaml  04-invalid-budget.yaml  README.md
skills/exedev-ctl/: SKILL.md
skills/exedev-ctl/agents/: openai.yaml
skills/exedev-ctl/references/: exedev-ctl.md
