[workspace]
members = ["core", "cli", "k8s_cli"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["lollipopkit <a@lollipopkit.com>"]
license = "OSL-3.0"
repository = "https://github.com/lollipopkit/exedev-cli"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.6", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "suggestions"] }
comfy-table = { version = "7.2", default-features = false, features = ["tty"] }
dialoguer = { version = "0.12", default-features = false }
dotenvy = "0.15"
exedev-core = { package = "exedev-cli-core", version = "0.1.10", path = "core" }
rand = { version = "0.10", default-features = false, features = ["thread_rng"] }
reqwest = { version = "0.13", default-features = false, features = ["native-tls"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.52", default-features = false, features = ["macros", "process", "rt-multi-thread"] }

[profile.dist]
inherits = "release"
debug = 0
incremental = false
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
