[package]
name = "exedev-ctl"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "exedev-ctl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
comfy-table.workspace = true
exedev-core.workspace = true
serde_json.workspace = true
tokio.workspace = true
