[package]
name = "exedev-ctl"
version = "0.1.10"
description = "A Rust command-line client for managing exe.dev VMs over SSH or HTTPS."
readme = "README.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["exedev", "vm", "ssh", "api", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "exedev-ctl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
comfy-table.workspace = true
exedev-core.workspace = true
serde_json.workspace = true
tokio.workspace = true
