[package]
name = "exedev-k8s"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "exedev-k8s"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dialoguer.workspace = true
exedev-core.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
