[package]
name = "exedev-k8s"
version = "0.1.11"
description = "A Kubernetes fleet management CLI for bootstrapping k3s clusters on exe.dev VMs."
readme = "README.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["exedev", "kubernetes", "k3s", "tailscale", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "exedev-k8s"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dialoguer.workspace = true
exedev-core.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
